//proto/profile/v1/types.proto

syntax = "proto3";
package profile.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/core-platform/proto/profile/v1";

message SocialLinks {
  google.protobuf.StringValue website_url = 1;
  google.protobuf.StringValue linkedin_url = 2;
  google.protobuf.StringValue github_url = 3;
  google.protobuf.StringValue x_url = 4;
  google.protobuf.StringValue instagram_url = 5;
  google.protobuf.StringValue facebook_url = 6;
  google.protobuf.StringValue tiktok_url = 7;
  google.protobuf.StringValue youtube_url = 8;
  google.protobuf.StringValue twitch_url = 9;
  google.protobuf.StringValue discord_url = 10;
  google.protobuf.StringValue onlyfans_url = 11;
  map<string, string> others = 12;
}

message ProfileStats {
  uint64 follower_count = 1;
  uint64 following_count = 2;
  uint64 post_count = 3;
}

message Profile {
  string profile_id = 1;
  string owner_id = 2;
  string region_code = 3;
  string handle = 4;
  string display_name = 5;

  google.protobuf.StringValue bio = 6;
  google.protobuf.StringValue avatar_url = 7;
  google.protobuf.StringValue banner_url = 8;
  google.protobuf.StringValue location_label = 9;

  SocialLinks social_links = 10;
  ProfileStats stats = 11;
  uint64 post_count = 12;

  bool is_private = 13;
  google.protobuf.Timestamp created_at = 14;
  google.protobuf.Timestamp updated_at = 15;
  uint64 version = 16;
}

message ProfileSummary {
  string profile_id = 1;
  string owner_id = 2;
  string handle = 3;
  string display_name = 4;
  string avatar_url = 5;
}